# CamShaft

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.py  example_llm_integration.py  pyproject.toml  start.sh
src/camshaft/: __init__.py  cli.py  client.py  db.py  gatekeeper.py  proxy.py  search.py
src/graph_gatekeeper/: __init__.py  pipeline.py
tests/: test_gatekeeper.py
