[project]
name = "graph-gatekeeper"
version = "0.1.0"
description = "Micro-Precision Gatekeeper using Graphiti, FalkorDB, and ms-marco-MiniLM-L6-v2"
authors = [
    {name = "Antigravity", email = "AI"}
]
dependencies = [
    "falkordb>=1.0.0",
    "graphiti-core>=0.2.0",
    "graphifyy>=0.0.1",
    "ragatouille>=0.0.8",
    "torch>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
