[project]
name = "camshaft"
version = "0.1.0"
description = "Unified Graph/Vector DB Retrieval and ColBERT SDK"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "falkordb>=1.0.0",
    "graphiti-core>=0.2.0",
    "graphifyy>=0.0.1",
    "ragatouille>=0.0.8",
    "torch>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
