[project]
name = "camshaft"
version = "0.1.0"
description = "Unified Graph/Vector DB Retrieval and ColBERT SDK"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "falkordb>=1.0.0",
    "graphiti-core>=0.2.0",
    "graphifyy>=0.0.1",
    "torch>=2.0.0",
    "transformers",
    "huggingface_hub",
    "safetensors",
    "fastapi",
    "uvicorn",
    "httpx",
]
requires-python = ">=3.10"

[project.scripts]
camshaft = "camshaft.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
